@@ -116,14 +116,13 @@ if (!defined('PGV_PHPGEDVIEW')) {
 	{
 		$file_type = "regular";
 		
-/*
+
 	// FLV as http ----------------------------------
-	}else if(eregi("http" ,$rowm['m_file']) &&
-			eregi("\flvVideo.php",$rowm['m_file']) 
+	}else if(
+			eregi("http://www.youtube.com" ,$rowm['m_file']) 
 			) 
 	{
 		$file_type = "flv";
-*/
 
 	// FLV local file----------------------------------
 	}else if(
@@ -247,9 +246,11 @@ if (!defined('PGV_PHPGEDVIEW')) {
 				$menu["link"] = $mainMedia . "\" rel='clearbox[general_8]' rev=\"" . $rowm["m_media"] . "::" . $GEDCOM . "::" . PrintReady(strip_tags($mediaTitle)) .  "::" . htmlspecialchars($notes) . "";
 			//Else if Local flv file
 			}elseif ($file_type == "flvfile") {
-			//	$menu["link"] = "flv.php?flvVideo=" . $mainMedia . "\" rel='clearbox(" . 445 . "," . 370 . ",click)' rev=\"" . $rowm["m_media"] . "::" . $GEDCOM . "::" . PrintReady(strip_tags($mediaTitle)) . "::" . htmlspecialchars($notes) . "";
 				$menu["link"] = "module.php?mod=JWplayer&amp;pgvaction=flvVideo&amp;flvVideo=" . $mainMedia . "\" rel='clearbox(" . 445 . "," . 370 . ",click)' rev=\"" . $rowm["m_media"] . "::" . $GEDCOM . "::" . PrintReady(strip_tags($mediaTitle)) . "::" . htmlspecialchars($notes) . "";
-				// Else If url filetype (Lightbox)
+			// Else If flv url filetype (Lightbox)
+			}elseif ($file_type == "flv") {
+				$menu["link"] = "module.php?mod=JWplayer&amp;pgvaction=flvVideo&amp;flvVideo=" . str_replace('http://', '', $mainMedia) . "\" rel='clearbox(" . 445 . "," . 370 . ",click)' rev=\"" . $rowm["m_media"] . "::" . $GEDCOM . "::" . PrintReady(strip_tags($mediaTitle)) . "::" . htmlspecialchars($notes) . "";
+			// Else If url filetype (Lightbox)
 			}elseif ($file_type == "url") {
 				$menu["link"] = $mainMedia . "\" rel='clearbox(" . $LB_URL_WIDTH . "," . $LB_URL_HEIGHT . ",click)' rev=\"" . $rowm["m_media"] . "::" . $GEDCOM . "::" . PrintReady(strip_tags($mediaTitle)) . "::" . htmlspecialchars($notes) . "";
 			// Else Other filetype (Pop-up Window)
@@ -385,11 +386,9 @@ if (!defined('PGV_PHPGEDVIEW')) {
 						// Else If flv native (Lightbox)
 						}elseif ($file_type == "flvfile") {
 							print "<a href=\"module.php?mod=JWplayer&amp;pgvaction=flvVideo&amp;flvVideo=" . $mainMedia . "\" rel='clearbox(" . 445 . "," . 370 . ",click)' rev=\"" . $rowm["m_media"] . "::" . $GEDCOM . "::" . PrintReady(strip_tags($mediaTitle)) . "::" . htmlspecialchars($notes) . "\">\n";
-
 						// Else If flv url filetype (Lightbox)
-//						}elseif ($file_type == "flv") {
-//							print 	"<a href=\"" . $mainMedia . "\" rel='clearbox(" . 350 . "," . 320 . ",click)' rev=\"" . $rowm["m_media"] . "::" . $GEDCOM . "::" . PrintReady(strip_tags($mediaTitle)) . "::" . htmlspecialchars($notes) . "\">\n";
-
+						}elseif ($file_type == "flv") {
+							print "<a href=\"module.php?mod=JWplayer&amp;pgvaction=flvVideo&amp;flvVideo=" . str_replace('http://', '', $mainMedia) . "\" rel='clearbox(" . 445 . "," . 370 . ",click)' rev=\"" . $rowm["m_media"] . "::" . $GEDCOM . "::" . PrintReady(strip_tags($mediaTitle)) . "::" . htmlspecialchars($notes) . "\">\n";
 						// Else If url filetype (Lightbox)
 						}elseif ($file_type == "url") {
 							print 	"<a href=\"" . $mainMedia . "\" rel='clearbox(" . $LB_URL_WIDTH . "," . $LB_URL_HEIGHT . ",click)' rev=\"" . $rowm["m_media"] . "::" . $GEDCOM . "::" . PrintReady(strip_tags($mediaTitle)) . "::" . htmlspecialchars($notes) . "\">\n";
@@ -403,8 +402,11 @@ if (!defined('PGV_PHPGEDVIEW')) {
 				// LB 	print "<img src=\"".$thumbnail."\" border=\"0\" align=\"" . ($TEXT_DIRECTION== "rtl"?"right": "left") . "\" class=\"thumbnail\"";
 
 				// Now finally print the thumbnail ----------------------------------
+				// If URL flv file (eg You Tube)
+				if ($file_type == "flv") {
+					print "<img src=\"modules/JWplayer/flashrem.png\" height=\"60\" border=\"0\" " ;
 				// If Plain URL Print the Common Thumbnail
-				if (eregi("http",$rowm['m_file']) && !eregi("\.jpg",$rowm['m_file']) && !eregi("\.jpeg",$rowm['m_file']) && !eregi("\.gif",$rowm['m_file']) && !eregi("\.png",$rowm['m_file'])) {
+				}else if (eregi("http",$rowm['m_file']) && !eregi("\.jpg",$rowm['m_file']) && !eregi("\.jpeg",$rowm['m_file']) && !eregi("\.gif",$rowm['m_file']) && !eregi("\.png",$rowm['m_file'])) {
 					print "<img src=\"images/URL.png\" height=\"80\" border=\"0\" " ;
 				// If local flv file, print the common flv thumbnail
 				}else if (media_exists($thumbnail) && eregi("\media.gif",$thumbnail) && eregi("\.flv",$rowm['m_file'])) {
